--- a/37.BwInf/Runde2/Aufgabe2/BwInf37Runde2Aufgabe2/BwInf37Runde2Aufgabe2/BwInf37Runde2Aufgabe2.csproj
+++ b/37.BwInf/Runde2/Aufgabe2/BwInf37Runde2Aufgabe2/BwInf37Runde2Aufgabe2/BwInf37Runde2Aufgabe2.csproj
@@ -84,6 +84,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Drawing.cs" />
+    <Compile Include="Exeptions.cs" />
     <Compile Include="Solver.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
