Implemented Statistics class

--- a/37.BwInf/Runde2/Aufgabe2/BwInf37Runde2Aufgabe2/BwInf37Runde2Aufgabe2/BwInf37Runde2Aufgabe2.csproj
+++ b/37.BwInf/Runde2/Aufgabe2/BwInf37Runde2Aufgabe2/BwInf37Runde2Aufgabe2/BwInf37Runde2Aufgabe2.csproj
@@ -85,6 +85,7 @@
     </ApplicationDefinition>
     <Compile Include="Drawing.cs" />
     <Compile Include="AddOns.cs" />
+    <Compile Include="Statistics.cs" />
     <Compile Include="Solver.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
