--- a/36.BwInf/Runde2/Aufgabe1/BwInf37Runde2Aufgabe2/BwInf37Runde2Aufgabe2/BwInf36Runde2Aufgabe1.csproj
+++ b/36.BwInf/Runde2/Aufgabe1/BwInf37Runde2Aufgabe2/BwInf37Runde2Aufgabe2/BwInf36Runde2Aufgabe1.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{16CA25A4-2300-474B-9394-684CF92CE9E9}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>BwInf37Runde2Aufgabe2</RootNamespace>
-    <AssemblyName>BwInf37Runde2Aufgabe2</AssemblyName>
+    <RootNamespace>BwInf36Runde2Aufgabe1</RootNamespace>
+    <AssemblyName>BwInf36Runde2Aufgabe1</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -83,11 +83,19 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ConsoleWindow.xaml.cs">
+      <DependentUpon>ConsoleWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Drawing.cs" />
     <Compile Include="AddOns.cs" />
+    <Compile Include="Logger.cs" />
     <Compile Include="ProgramHandler.cs" />
     <Compile Include="Statistics.cs" />
     <Compile Include="Solver.cs" />
+    <Page Include="ConsoleWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
