--- a/36.BwInf/Runde2/Aufgabe1/BwInf37Runde2Aufgabe2/BwInf37Runde2Aufgabe2/BwInf36Runde2Aufgabe1.csproj
+++ b/36.BwInf/Runde2/Aufgabe1/BwInf37Runde2Aufgabe2/BwInf37Runde2Aufgabe2/BwInf36Runde2Aufgabe1.csproj
@@ -104,7 +104,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Data.cs" />
+    <Compile Include="data.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
